attempt to fix wallpaper on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -29,3 +29,9 @@ body {
   background-repeat: no-repeat;
   background-attachment: fixed;
 }
+
+@media only screen and (max-width: 768px) {
+  body {
+    background-size: contain;
+  }
+}
